# smart-todo-app

./: .gitignore  PROJECT_REPORT.md  README.md  pyproject.toml
docs/: architecture.md
src/: main.py
src/cli/: interface.py
src/models/: task.py  todo_list.py
src/parsers/: date_parser.py  regex_patterns.py  task_parser.py  validator.py
src/services/: storage_service.py  task_service.py
tests/: test_cli.py  test_date_parser.py  test_regex_patterns.py  test_storage_service.py  test_task.py  test_task_parser.py  test_task_service.py  test_todo_list.py  test_validator.py
