[project]
name = "smart-todo-app"
version = "0.1.0"
description = "a command-line todo application with advanced features powered by regular expressions for intelligent task parsing and management"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "y"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
